eval/runs/basic_pacha_on_spagila/hard/112_hasura_contrib
=== INPUT ===
"Give me top N stores by revenue by DVD category (Comedy

=== OUTPUT ===

=== QUERY PLAN ===
To provide more context to this conversation, I need to retrieve data from the user's database. Specifically, I need to retrieve the top N stores by revenue for the Comedy DVD category.

Here is the Python script to retrieve the required data:
```
comedy_revenue_data = executor.get_from_database("""
    SELECT 
        fu.id AS store_id, 
        fu.address_id, 
        SUM(m.rate * mc.quantity) AS total_revenue
    FROM 
        movie m 
    JOIN 
        movie_cat mc ON m.id = mc.film_id 
    JOIN 
        catalog c ON m.id = c.film_id 
    JOIN 
        franchise_unit fu ON c.store_id = fu.id 
    WHERE 
        mc.category_id IN (SELECT id FROM cat WHERE name = 'Comedy')
    GROUP BY 
        fu.id, fu.address_id
    ORDER BY 
        total_revenue DESC
    LIMIT N;
""")

executor.output(f'Top {N} stores by revenue for Comedy DVD category:\n{comedy_revenue_data}')
```
This script retrieves the top N stores by revenue for the Comedy DVD category by joining the `movie`, `movie_cat`, `catalog`, and `franchise_unit` tables. The `WHERE` clause filters the results to only include movies with the Comedy category, and the `GROUP BY` clause groups the results by store ID and address ID. The `ORDER BY` clause sorts the results by total revenue in descending order, and the `LIMIT` clause limits the results to the top N stores.

The output will be a list of the top N stores by revenue for the Comedy DVD category, including the store ID, address ID, and total revenue.
=== EXECUTION RESULT ===
Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/Users/abhg/hasura/ai-engine/pacha/query_planner/query_planner.py", line 26, in get_from_database
    return self.data_engine.execute_sql(sql)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/abhg/hasura/ai-engine/pacha/data_engine/data_engine.py", line 34, in execute_sql
    cursor.execute(f"SELECT json_agg(t) FROM ({sql.strip(";")}) AS t")
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 20:     LIMIT N;
                    ^

